@@ -265,6 +265,9 @@ pub type ParseGetTxnFeesResponseCB = extern fn(command_handle: i32,
 ///
 /// It allows library user to provide custom payment method implementation as set of handlers.
 ///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
+///
 /// #Params
 /// command_handle: Command handle to map callback to caller context.
 /// payment_method: The type of payment method also used as sub-prefix for fully resolvable payment address format ("sov" - for example)
@@ -352,6 +355,9 @@ pub extern fn indy_register_payment_method(command_handle: i32,
 /// Note that payment method should be able to resolve this
 /// secret by fully resolvable payment address format.
 ///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
+///
 /// #Params
 /// command_handle: command handle to map callback to context
 /// wallet_handle: wallet handle where to save new address
@@ -403,6 +409,9 @@ pub extern fn indy_create_payment_address(command_handle: i32,
 
 /// Lists all payment addresses that are stored in the wallet
 ///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
+///
 /// #Params
 /// command_handle: command handle to map callback to context
 /// wallet_handle: wallet to search for payment_addresses in
@@ -453,6 +462,9 @@ pub extern fn indy_list_payment_addresses(command_handle: i32,
 ///
 /// Format of inputs is specific for payment method. Usually it should reference payment transaction
 /// with at least one output that corresponds to payment address that user owns.
+///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
 ///
 /// #Params
 /// wallet_handle: wallet handle
@@ -520,6 +532,9 @@ pub extern fn indy_add_request_fees(command_handle: i32,
 
 /// Parses response for Indy request with fees.
 ///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
+///
 /// #Params
 /// command_handle
 /// payment_method
@@ -567,6 +582,9 @@ pub extern fn indy_parse_response_with_fees(command_handle: i32,
 
 /// Builds Indy request for getting UTXO list for payment address
 /// according to this payment method.
+///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
 ///
 /// #Params
 /// wallet_handle: wallet handle
@@ -616,6 +634,9 @@ pub extern fn indy_build_get_utxo_request(command_handle: i32,
 }
 
 /// Parses response for Indy request for getting UTXO list.
+///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
 ///
 /// #Params
 /// resp_json: response for Indy request for getting UTXO list
@@ -670,6 +691,9 @@ pub extern fn indy_parse_get_utxo_response(command_handle: i32,
 ///
 /// Format of inputs is specific for payment method. Usually it should reference payment transaction
 /// with at least one output that corresponds to payment address that user owns.
+///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
 ///
 /// #Params
 /// wallet_handle: wallet handle
@@ -731,6 +755,9 @@ pub extern fn indy_build_payment_req(command_handle: i32,
 
 /// Parses response for Indy request for payment txn.
 ///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
+///
 /// #Params
 /// command_handle
 /// payment_method
@@ -781,6 +808,9 @@ pub extern fn indy_parse_payment_response(command_handle: i32,
 
 /// Builds Indy request for doing tokens minting
 /// according to this payment method.
+///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
 ///
 /// #Params
 /// wallet_handle: wallet handle
@@ -835,6 +865,9 @@ pub extern fn indy_build_mint_req(command_handle: i32,
 }
 
 /// Builds Indy request for setting fees for transactions in the ledger
+///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
 ///
 /// # Params
 /// command_handle
@@ -891,6 +924,9 @@ pub extern fn indy_build_set_txn_fees_req(command_handle: i32,
 
 /// Builds Indy get request for getting fees for transactions in the ledger
 ///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
+///
 /// # Params
 /// command_handle
 /// wallet_handle: wallet handle
@@ -937,6 +973,9 @@ pub extern fn indy_build_get_txn_fees_req(command_handle: i32,
 }
 
 /// Parses response for Indy request for getting fees
+///
+/// Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+/// in the future releases.
 ///
 /// # Params
 /// command_handle
