@@ -107,6 +107,9 @@ public class Payments extends IndyJava.API {
      *
      * Note that payment method should be able to resolve this
      * secret by fully resolvable payment address format.
+     *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param wallet The wallet.
      * @param paymentMethod Payment method to use (for example, 'sov')
      * @param config payment address config as json:
@@ -145,6 +148,8 @@ public class Payments extends IndyJava.API {
     /**
      * Lists all payment addresses that are stored in the wallet
      *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param wallet The wallet.
      * @return json array of string with json addresses
      * @throws IndyException
@@ -181,6 +186,9 @@ public class Payments extends IndyJava.API {
      *
      * Format of inputs is specific for payment method. Usually it should reference payment transaction
      * with at least one output that corresponds to payment address that user owns.
+     *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param wallet The wallet.
      * @param submitterDid DID of request sender
      * @param reqJson initial transaction request as json
@@ -231,6 +239,9 @@ public class Payments extends IndyJava.API {
 
     /**
      * Parses response for Indy request with fees.
+     *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param paymentMethod
      * @param respJson response for Indy request with fees
      * @return parsed (payment method and node version agnostic) utxo info as json:
@@ -251,6 +262,9 @@ public class Payments extends IndyJava.API {
     /**
      * Builds Indy request for getting UTXO list for payment address
      * according to this payment method.
+     *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param wallet The wallet.
      * @param submitterDid DID of request sender
      * @param paymentAddress target payment address
@@ -285,6 +299,8 @@ public class Payments extends IndyJava.API {
     /**
      * Parses response for Indy request for getting UTXO list.
      *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param paymentMethod
      * @param respJson response for Indy request for getting UTXO list
      * @return parsed (payment method and node version agnostic) utxo info as json:
@@ -311,6 +327,8 @@ public class Payments extends IndyJava.API {
      * Format of inputs is specific for payment method. Usually it should reference payment transaction
      * with at least one output that corresponds to payment address that user owns.
      *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param wallet The wallet.
      * @param submitterDid DID of request sender
      * @param inputsJson The list of UTXO inputs as json array:
@@ -358,6 +376,8 @@ public class Payments extends IndyJava.API {
     /**
      * Parses response for Indy request for payment txn.
      *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param paymentMethod
      * @param respJson response for Indy request for payment txn
      * @return parsed (payment method and node version agnostic) utxo info as json:
@@ -378,6 +398,9 @@ public class Payments extends IndyJava.API {
     /**
      * Builds Indy request for doing tokens minting
      * according to this payment method.
+     *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      *
      * @param wallet The wallet.
      * @param submitterDid DID of request sender
@@ -417,6 +440,9 @@ public class Payments extends IndyJava.API {
 
     /**
      * Builds Indy request for setting fees for transactions in the ledger
+     *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param wallet The wallet.
      * @param submitterDid DID of request sender
      * @param paymentMethod
@@ -460,6 +486,8 @@ public class Payments extends IndyJava.API {
     /**
      * Builds Indy get request for getting fees for transactions in the ledger
      *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param wallet The wallet.
      * @param submitterDid DID of request sender
      * @param paymentMethod
@@ -493,6 +521,9 @@ public class Payments extends IndyJava.API {
 
     /**
      * Parses response for Indy request for getting fees
+     *
+     * Note this endpoint is EXPERIMENTAL. Function signature and behaviour may change
+     * in the future releases.
      * @param paymentMethod
      * @param respJson response for Indy request for getting fees
      * @return fees_json {
